maintainIT2/src/objects/WO_Other_Cost__c.object
<CustomObject>
    <description>Work Order/WO Other: Miscellaneous/Other Costs</description>
    <fields>
        <fullName>Actual_Misc_Cost_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>Actual Misc Cost Amount to be charged to the Work Order</description>
        <inlineHelpText>Actual Misc Cost Amount in base currency to be charged to the Work Order</inlineHelpText>
        <label>Actual Misc Cost Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cost_Type__c</fullName>
        <description>Miscellaneous Cost Type Picklist - User Defined</description>
        <inlineHelpText>Miscellaneous Cost Type Picklist - User Defined</inlineHelpText>
        <label>Cost Type</label>
        <picklist>
            <picklistValues>
                <fullName>Type 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Type 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Miscellaneous Work Order Cost Amount Description</description>
        <inlineHelpText>Miscellaneous Work Order Cost Amount Description</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Misc_Cost_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <description>The Planned Misc Cost Amount is a used to identify expected misc costs by Vendor during the planning process.</description>
        <inlineHelpText>The Planned Misc Cost Amount is a used to identify expected misc costs by Vendor during the planning process.</inlineHelpText>
        <label>Planned Misc Cost Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Vendor.  Lookup to Accounts where Vendor = True</description>
        <inlineHelpText>Vendor.  Lookup to Accounts where Vendor = True</inlineHelpText>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Vendor__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Lookup to Accounts where Vendor = True.  Clear filter to see select any other type of Account</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>WO_Misc_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order_Status__c</fullName>
        <description>Work Order Status</description>
        <formula>text(Work_Order__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Work Order Status</inlineHelpText>
        <label>Work Order Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <description>Work Order</description>
        <inlineHelpText>Work Order</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>Work_Order__c</referenceTo>
        <relationshipName>Misc_WO_Costs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>WO Other Cost</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Work_Order__c</columns>
        <columns>Work_Order_Status__c</columns>
        <columns>Vendor__c</columns>
        <columns>Planned_Misc_Cost_Amount__c</columns>
        <columns>Actual_Misc_Cost_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MC-{0000000}</displayFormat>
        <label>WO Misc Cost ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WO Other Costs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>WO_Actual_Misc_Cost_Amt_NonNegative</fullName>
        <active>true</active>
        <description>Ensures that the Actual Misc Cost Amount is a Non Negative Value</description>
        <errorConditionFormula>Actual_Misc_Cost_Amount__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Actual_Misc_Cost_Amount__c</errorDisplayField>
        <errorMessage>The Actual Miscellaneous Cost Amount must be greater than or equal to zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WO_Planned_Misc_Cost_Amt_NonNegative</fullName>
        <active>true</active>
        <description>Ensures that the Planned Work Order Miscellaneous Cost Amount is a Non Negative Amount</description>
        <errorConditionFormula>Planned_Misc_Cost_Amount__c  &lt; 0</errorConditionFormula>
        <errorDisplayField>Planned_Misc_Cost_Amount__c</errorDisplayField>
        <errorMessage>The Planned Miscellaneous Cost Amount must be greater than or equal to zero</errorMessage>
    </validationRules>
</CustomObject>